.k3d/manifests/kubernetes-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-kubernetes-dashboard-stripprefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /k8s
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  name: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kubernetes-dashboard-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /k8s
